@@ -1,20 +1,23 @@
 package com.dat3m.dartagnan.program.processing;
 
+import com.dat3m.dartagnan.expression.ExpressionFactory;
+import com.dat3m.dartagnan.program.Function;
 import com.dat3m.dartagnan.program.Program;
 import com.dat3m.dartagnan.program.Thread;
 import com.dat3m.dartagnan.program.event.EventFactory;
+import com.dat3m.dartagnan.program.event.EventUser;
 import com.dat3m.dartagnan.program.event.Tag;
 import com.dat3m.dartagnan.program.event.core.CondJump;
 import com.dat3m.dartagnan.program.event.core.Event;
 import com.dat3m.dartagnan.program.event.core.Label;
 import com.dat3m.dartagnan.program.event.lang.svcomp.LoopBound;
+import com.dat3m.dartagnan.program.event.metadata.UnrollingId;
 import com.google.common.base.Preconditions;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 import org.sosy_lab.common.configuration.*;
 
 import java.util.*;
-import java.util.stream.Collectors;
 
 import static com.dat3m.dartagnan.configuration.OptionNames.BOUND;
 
@@ -67,35 +70,42 @@ public class LoopUnrolling implements ProgramProcessor {
             return;
         }
         final int defaultBound = this.bound;
-        program.getEvents().forEach(e -> e.setUId(e.getGlobalId())); // Track ids before unrolling
-        program.getThreads().forEach(thread -> unrollLoopsInThread(thread, defaultBound));
+        program.getFunctions().forEach(this::run);
+        program.getThreads().forEach(this::run);
         program.markAsUnrolled(defaultBound);
-        EventIdReassignment.newInstance().run(program); // Reassign ids because of newly created events
+        IdReassignment.newInstance().run(program); // Reassign ids because of newly created events
 
         logger.info("Program unrolled {} times", defaultBound);
     }
 
-    private void unrollLoopsInThread(Thread thread, int defaultBound){
-        final Map<CondJump, Integer> loopBoundsMap = computeLoopBoundsMap(thread, defaultBound);
-        thread.getEvents().stream()
-                .filter(CondJump.class::isInstance).map(CondJump.class::cast)
+
+    private void run(Function function) {
+        function.getEvents().forEach(e -> e.setMetadata(new UnrollingId(e.getGlobalId()))); // Track ids before unrolling
+        unrollLoopsInFunction(function, bound);
+    }
+
+    private void unrollLoopsInFunction(Function func, int defaultBound) {
+        if (!func.hasBody()) {
+            return;
+        }
+        final Map<CondJump, Integer> loopBoundsMap = computeLoopBoundsMap(func, defaultBound);
+        func.getEvents(CondJump.class).stream()
                 .filter(loopBoundsMap::containsKey)
                 .forEach(j -> unrollLoop(j, loopBoundsMap.get(j)));
     }
 
-    private Map<CondJump, Integer> computeLoopBoundsMap(Thread thread, int defaultBound) {
+    private Map<CondJump, Integer> computeLoopBoundsMap(Function func, int defaultBound) {
 
         LoopBound curBoundAnnotation = null;
         final Map<CondJump, Integer> loopBoundsMap = new HashMap<>();
-        for (Event event : thread.getEvents()) {
-            if (event instanceof LoopBound) {
+        for (Event event : func.getEvents()) {
+            if (event instanceof LoopBound boundAnnotation) {
                 // Track LoopBound annotation
                 if (curBoundAnnotation != null) {
                     logger.warn("Found loop bound annotation that overwrites a previous, unused annotation.");
                 }
-                curBoundAnnotation = (LoopBound) event;
-            } else if (event instanceof Label) {
-                final Label label = (Label) event;
+                curBoundAnnotation = boundAnnotation;
+            } else if (event instanceof Label label) {
                 final Optional<CondJump> backjump = label.getJumpSet().stream()
                         .filter(j -> j.getGlobalId() > label.getGlobalId()).findFirst();
                 final boolean isLoop = backjump.isPresent();
@@ -103,7 +113,7 @@ public class LoopUnrolling implements ProgramProcessor {
                 if (isLoop) {
                     // Bound annotation > Spin loop tag > default bound
                     final int bound = curBoundAnnotation != null ? curBoundAnnotation.getBound()
-                            : label.is(Tag.SPINLOOP) ? 1 : defaultBound;
+                            : label.hasTag(Tag.SPINLOOP) ? 1 : defaultBound;
                     loopBoundsMap.put(backjump.get(), bound);
                     curBoundAnnotation = null;
                 }
@@ -124,21 +134,19 @@ public class LoopUnrolling implements ProgramProcessor {
                 // Update loop iteration label
                 final String loopName = loopBegin.getName();
                 loopBegin.setName(String.format("%s%s%s%d", loopName, LOOP_INFO_SEPARATOR, LOOP_INFO_ITERATION_SUFFIX, iterCounter));
-                loopBegin.addFilters(Tag.NOOPT);
+                loopBegin.addTags(Tag.NOOPT);
 
                 // This is the last iteration, so we replace the back jump by a bound event.
-                final Label threadExit = (Label) loopBackJump.getThread().getExit();
-                final CondJump boundEvent = EventFactory.newGoto(threadExit);
-                boundEvent.addFilters(Tag.BOUND, Tag.EARLYTERMINATION, Tag.NOOPT);
+                final Event boundEvent = newBoundEvent(loopBackJump.getFunction());
                 loopBackJump.replaceBy(boundEvent);
 
                 // Mark end of loop, so we can find it later again
                 final Label endOfLoopMarker = EventFactory.newLabel(String.format("%s%s%s", loopName, LOOP_INFO_SEPARATOR, LOOP_INFO_BOUND_SUFFIX));
-                endOfLoopMarker.addFilters(Tag.NOOPT);
+                endOfLoopMarker.addTags(Tag.NOOPT);
                 boundEvent.getPredecessor().insertAfter(endOfLoopMarker);
 
-                boundEvent.copyMetadataFrom(loopBackJump);
-                endOfLoopMarker.copyMetadataFrom(loopBackJump);    
+                boundEvent.copyAllMetadataFrom(loopBackJump);
+                endOfLoopMarker.copyAllMetadataFrom(loopBackJump);
 
             } else {
                 final Map<Event, Event> copyCtx = new HashMap<>();
@@ -149,15 +157,15 @@ public class LoopUnrolling implements ProgramProcessor {
                 if (iterCounter == 1) {
                     // This is the first unrolling; every outside jump to the loop header
                     // gets updated to jump to the first iteration instead.
-                    final List<Event> loopEntryJumps = loopBegin.getJumpSet().stream()
-                            .filter(j -> j != loopBackJump).collect(Collectors.toList());
+                    final List<CondJump> loopEntryJumps = loopBegin.getJumpSet().stream()
+                            .filter(j -> j != loopBackJump).toList();
                     loopEntryJumps.forEach(j -> j.updateReferences(copyCtx));
                 }
 
                 // Rename label of iteration.
                 final Label loopBeginCopy = ((Label)copyCtx.get(loopBegin));
                 loopBeginCopy.setName(String.format("%s%s%s%d", loopBegin.getName(), LOOP_INFO_SEPARATOR, LOOP_INFO_ITERATION_SUFFIX, iterCounter));
-                loopBeginCopy.addFilters(Tag.NOOPT);
+                loopBeginCopy.addTags(Tag.NOOPT);
             }
         }
     }
@@ -166,17 +174,25 @@ public class LoopUnrolling implements ProgramProcessor {
         final List<Event> copies = new ArrayList<>();
 
         Event cur = from;
-        Event lastCopy = null;
         while(cur != null && !cur.equals(until)){
             final Event copy = cur.getCopy();
-            copy.setPredecessor(lastCopy);
             copies.add(copy);
             copyContext.put(cur, copy);
-            lastCopy = copy;
             cur = cur.getSuccessor();
         }
 
-        copies.forEach(e -> e.updateReferences(copyContext));
+        copies.stream()
+                .filter(EventUser.class::isInstance).map(EventUser.class::cast)
+                .forEach(e -> e.updateReferences(copyContext));
         return copies;
     }
+
+    private Event newBoundEvent(Function func) {
+        final Event boundEvent = func instanceof Thread thread ?
+                EventFactory.newGoto((Label) thread.getExit()) :
+                EventFactory.newAbortIf(ExpressionFactory.getInstance().makeTrue());
+        boundEvent.addTags(Tag.BOUND, Tag.EARLYTERMINATION, Tag.NOOPT);
+        return boundEvent;
+    }
+
 }
